[package]
name = "merchant"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.19.2", features = ["net", "rt-multi-thread", "sync", "time"] }
tokio-util = { version = "0.7", features = ["codec"] }

tracing = "0.1"
futures = { version = "0.3.0", features = ["thread-pool"]}
